--- a/clash.ini
+++ b/clash.ini
@@ -36,7 +36,7 @@ ruleset=✋ Final,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT`[].*
+custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT`.*
 custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📠 Telegram`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
