--- a/clash.ini
+++ b/clash.ini
@@ -36,7 +36,7 @@ ruleset=✋ Final,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT`.*
+custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📠 Telegram`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
@@ -55,12 +55,12 @@ custom_proxy_group=🐼 China`select`[]DIRECT`[]🛰 Global`[]✔ AutoBest
 custom_proxy_group=❌ BanAD`select`[]REJECT`[]DIRECT
 custom_proxy_group=❌ BanAPPAD`select`[]REJECT`[]DIRECT
 custom_proxy_group=✋ Final`select`[]🛰 Global`[]✔ AutoBest`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual
-custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Japan`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=Japan`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=USA`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=Korea`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=Korea`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=➡NETFLIX`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
