--- a/clash.ini
+++ b/clash.ini
@@ -61,7 +61,7 @@ custom_proxy_group=USA`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费
 custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=Korea`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=➡NETFLIX`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
+custom_proxy_group=➡NETFLIX`select`(NF|奈飞|解锁|流媒体|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
 enable_rule_generator=true
