--- a/clash.ini
+++ b/clash.ini
@@ -44,7 +44,7 @@ custom_proxy_group=🤖 ChatGPT`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`
 custom_proxy_group=📹 YouTube`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 ;custom_proxy_group=📺 巴哈姆特`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
-custom_proxy_group=🍎 AppleTV`select`[]DIRECT`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
+custom_proxy_group=🍎 AppleTV`select`[]✔ AutoBest`[]🛰 Global`[]DIRECT`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
 custom_proxy_group=📺 GlobalMedia`select`[]🛰 Global`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 custom_proxy_group=📺 ChinaMedia`select`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]👆 Manual
 custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
