--- a/clash.ini
+++ b/clash.ini
@@ -39,22 +39,22 @@ ruleset=✋ Final,[]FINAL
 custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=📠 Telegram`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
-custom_proxy_group=🤖 ChatGPT`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]🛰 Global`[]✔ AutoBest`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
+custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]🛰 Global`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
+custom_proxy_group=🤖 ChatGPT`select`[]✔ AutoBest`[]🛰 Global`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]🛰 Global`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]🛰 Global`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 ;custom_proxy_group=📺 巴哈姆特`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
 custom_proxy_group=🍎 AppleTV`select`[]✔ AutoBest`[]🛰 Global`[]DIRECT`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
-custom_proxy_group=📺 GlobalMedia`select`[]🛰 Global`[]✔ AutoBest`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
+custom_proxy_group=📺 GlobalMedia`select`[]✔ AutoBest`[]🛰 Global`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual`[]DIRECT
 custom_proxy_group=📺 ChinaMedia`select`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]👆 Manual
-custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
-custom_proxy_group=Ⓜ Microsoft`select`[]DIRECT`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
-custom_proxy_group=🎮 Game`select`[]DIRECT`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
+custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
+custom_proxy_group=Ⓜ Microsoft`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
+custom_proxy_group=🎮 Game`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
 custom_proxy_group=🎶 NetEaseMusic`select`[]DIRECT`[]🛰 Global`[]✔ AutoBest`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=🐼 China`select`[]DIRECT`[]🛰 Global`[]✔ AutoBest
+custom_proxy_group=🐼 China`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global
 custom_proxy_group=❌ BanAD`select`[]REJECT`[]DIRECT
 custom_proxy_group=❌ BanAPPAD`select`[]REJECT`[]DIRECT
-custom_proxy_group=✋ Final`select`[]🛰 Global`[]✔ AutoBest`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual
+custom_proxy_group=✋ Final`select`[]✔ AutoBest`[]🛰 Global`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]👆 Manual
 custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=Japan`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=USA`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
