--- a/clash.ini
+++ b/clash.ini
@@ -50,7 +50,7 @@ custom_proxy_group=📺 ChinaMedia`select`[]DIRECT`[]HongKong`[]Taiwan`[]Singapo
 custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
 custom_proxy_group=Ⓜ Microsoft`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
 custom_proxy_group=🎮 Game`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea`[]👆 Manual
-custom_proxy_group=🎶 NetEaseMusic`select`[]DIRECT`[]🛰 Global`[]✔ AutoBest`(网易|音乐|解锁|Music|NetEase)
+custom_proxy_group=🎶 NetEaseMusic`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🐼 China`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global
 custom_proxy_group=❌ BanAD`select`[]REJECT`[]DIRECT
 custom_proxy_group=❌ BanAPPAD`select`[]REJECT`[]DIRECT
