--- a/clash.ini
+++ b/clash.ini
@@ -14,7 +14,7 @@ ruleset=❌ BanAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=❌ BanAPPAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=☁ OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
 ruleset=Ⓜ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
-ruleset=🤖 ChatGPT,https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Tool/Loon/Rule/OpenAI.list
+ruleset=🤖 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🍎 AppleTV,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
 ruleset=📠 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🎶 NetEaseMusic,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
@@ -40,7 +40,7 @@ custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]👆 Manual`[]HongKong`[]
 custom_proxy_group=👆 Manual`select`.*
 custom_proxy_group=✔ AutoBest`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-custom_proxy_group=🤖 ChatGPT`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
+custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 ;custom_proxy_group=📺 巴哈姆特`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
