--- a/clash.ini
+++ b/clash.ini
@@ -10,26 +10,35 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=❌ BanAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=❌ BanAPPAD,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=☁ OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
-ruleset=Ⓜ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=📢 FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=☁ OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Ⓜ Microsoft,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=📠 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🤖 OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-ruleset=🍎 AppleTV,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AppleTV/AppleTV.list
-ruleset=📠 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=🎶 NetEaseMusic,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
-ruleset=🎮 Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-ruleset=🎮 Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
-ruleset=🎮 Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🎮 Game,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
-ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-;ruleset=📺 巴哈姆特,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bahamut/Bahamut.list
-ruleset=📺 ChinaMedia,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Classical.yaml
-ruleset=📺 GlobalMedia,https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
-ruleset=🛰 Global,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Domain.txt
-ruleset=🐼 China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China.list
-ruleset=🐼 China,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaIPsBGP/ChinaIPsBGP.list
+ruleset=🎶 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
+ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
+ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+ruleset=📹 YouTube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🎥 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+;ruleset=📺 Bahamut,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
+rulese=♍ Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+rulese=♍ Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=📺 ChinaMedia,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=📺 GlobalMedia,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=🛰 Global,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🐼 China,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=🐼 China,[]GEOIP,LAN
 ruleset=🐼 China,[]GEOIP,CN
 ruleset=✋ Final,[]FINAL
@@ -38,29 +47,31 @@ ruleset=✋ Final,[]FINAL
 ;设置分组标志位
 custom_proxy_group=🛰 Global`select`[]✔ AutoBest`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=👆 Manual`select`.*
-custom_proxy_group=✔ AutoBest`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=✔ AutoBest`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=📠 Telegram`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🤖 OpenAI`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=🎥 Netflix`select`[]➡NETFLIX`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]Singapore`[]HongKong`[]Taiwan`[]Japan`[]USA`[]Korea`[]DIRECT
-;custom_proxy_group=📺 巴哈姆特`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
-custom_proxy_group=🍎 AppleTV`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]DIRECT`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+;custom_proxy_group=📺 Bahamut`select`[]Taiwan`[]🛰 Global`[]👆 Manual`[]DIRECT
+custom_proxy_group=♍ Bilibili`select`[]🐼 China`[]Taiwan`[]HongKong
 custom_proxy_group=📺 GlobalMedia`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea`[]DIRECT
 custom_proxy_group=📺 ChinaMedia`select`[]DIRECT`[]👆 Manual`[]HongKong`[]Taiwan`[]Singapore`[]Japan
+custom_proxy_group=📢 FCM`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
 custom_proxy_group=☁ OneDrive`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
 custom_proxy_group=Ⓜ Microsoft`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
 custom_proxy_group=🎮 Game`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]USA`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]Korea
 custom_proxy_group=🎶 NetEaseMusic`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`(网易|音乐|解锁|Music|NetEase)
 custom_proxy_group=🐼 China`select`[]DIRECT`[]✔ AutoBest`[]🛰 Global`[]👆 Manual
 custom_proxy_group=❌ BanAD`select`[]REJECT`[]DIRECT`[]👆 Manual
 custom_proxy_group=❌ BanAPPAD`select`[]REJECT`[]DIRECT`[]👆 Manual
 custom_proxy_group=✋ Final`select`[]✔ AutoBest`[]🛰 Global`[]👆 Manual`[]DIRECT`[]HongKong`[]Taiwan`[]Singapore`[]Japan`[]USA`[]Korea
-custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=Japan`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=USA`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=Korea`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=HongKong`url-test`(港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Japan`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=USA`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Taiwan`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Singapore`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=Korea`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=➡NETFLIX`select`(NF|奈飞|解锁|流媒体|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
