--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -4,7 +4,7 @@ payload:
   - DOMAIN-SUFFIX,52kukan.net
   - DOMAIN-SUFFIX,7xdy.com
   - DOMAIN-KEYWORD,galaxyappstore
-  - DOMAIN-SUFFIX,41319.life
+  - DOMAIN-SUFFIX,qqarc.com
 # ntp 服务
   - DOMAIN-SUFFIX,ntp.org
   - DST-PORT,123
