--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -12,3 +12,4 @@ payload:
   - DOMAIN-SUFFIX,reflix.top
   - DOMAIN-SUFFIX,snfaka.com
   - DOMAIN-SUFFIX,feiyangdigital.top
+  - DOMAIN-SUFFIX,41319.life
