--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -14,3 +14,7 @@ payload:
   - DOMAIN-SUFFIX,snfaka.com
   - DOMAIN-SUFFIX,feiyangdigital.top
   - DOMAIN-SUFFIX,zbds.top
+# 游侠
+  - DOMAIN-SUFFIX,llren.com
+  - DOMAIN-SUFFIX,youxia.net
+  - DOMAIN-SUFFIX,youxi*.com
