--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -17,4 +17,5 @@ payload:
 # 游侠
   - DOMAIN-SUFFIX,llren.com
   - DOMAIN-SUFFIX,youxia.net
-  - DOMAIN-SUFFIX,youxi*.com
+  - DOMAIN-SUFFIX,youxi233.com
+  - DOMAIN-SUFFIX,youxi299.com
