--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -18,6 +18,6 @@ payload:
   - DOMAIN-SUFFIX,llren.com
   - DOMAIN-SUFFIX,youxia.net
   - DOMAIN-KEYWORD,youxi
-#
+# 影视工厂
   - DOMAIN-KEYWORD,ysgc
   - DOMAIN-SUFFIX,tjihua.com
