--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -62,9 +62,13 @@ payload:
   - DOMAIN-SUFFIX,yiso.fun
   - DOMAIN-SUFFIX,4kfox.com
   - DOMAIN-SUFFIX,seedhub.cc
-  - DOMAIN,80sgod.dnscf.vip
+  - DOMAIN-SUFFIX,libvio.mov
+  - DOMAIN-SUFFIX,wsrv.nl
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
   - DOMAIN-KEYWORD,suoniapi
   - DOMAIN-KEYWORD,tianyiso
   - DOMAIN-KEYWORD,yinruifei
+  - DOMAIN-KEYWORD,wogg
+  - DOMAIN-KEYWORD,cdnlz22
+  - DOMAIN-KEYWORD,80sgod
