--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -12,6 +12,7 @@ payload:
   - DOMAIN-SUFFIX,snfaka.com
   - DOMAIN-SUFFIX,feiyangdigital.top
   - DOMAIN-SUFFIX,zbds.top
+  - DOMAIN-SUFFIX,lianxiwo.top
 # 游侠
   - DOMAIN-SUFFIX,llren.com
   - DOMAIN-SUFFIX,youxia.net
