--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -73,6 +73,7 @@ payload:
   - DOMAIN-KEYWORD,wogg
   - DOMAIN-KEYWORD,cdnlz22
   - DOMAIN-KEYWORD,80sgod
+  - DOMAIN-KEYWORD,rrcdnbf2
 # 铜钟音乐
   - DOMAIN-SUFFIX,whamon.com
 # 小众软件
