--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -65,6 +65,7 @@ payload:
   - DOMAIN-SUFFIX,seedhub.cc
   - DOMAIN-SUFFIX,libvio.mov
   - DOMAIN-SUFFIX,wsrv.nl
+  - DOMAIN-SUFFIX,cmliussss.net
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
   - DOMAIN-KEYWORD,suoniapi
@@ -74,6 +75,7 @@ payload:
   - DOMAIN-KEYWORD,cdnlz22
   - DOMAIN-KEYWORD,80sgod
   - DOMAIN-KEYWORD,rrcdnbf2
+  - DOMAIN-KEYWORD,tyyswimg
 # 铜钟音乐
   - DOMAIN-SUFFIX,whamon.com
 # 小众软件
