--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -82,6 +82,7 @@ payload:
   - DOMAIN-KEYWORD,hongniuzy
   - DOMAIN-KEYWORD,ffzy-play
   - DOMAIN-KEYWORD,wlcdn
+  - DOMAIN-KEYWORD,ottiptv
 # 铜钟音乐
   - DOMAIN-SUFFIX,whamon.com
 # 小众软件
