--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -75,7 +75,7 @@ payload:
   - DOMAIN-SUFFIX,xpgtv.com
   - DOMAIN-SUFFIX,xmflv.com
   - DOMAIN-SUFFIX,bingdou.vip
-  - DOMAIN-SUFFIX,*xiaopan.fun
+  - DOMAIN-SUFFIX,2xiaopan.fun
   - DOMAIN-SUFFIX,miqk.cc
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
