--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -96,6 +96,15 @@ payload:
   - DOMAIN-SUFFIX,pansearch.me
   - DOMAIN-SUFFIX,xb6v.com
   - DOMAIN-SUFFIX,ysmfyl.top
+  - DOMAIN-SUFFIX,dm84.net
+  - DOMAIN-SUFFIX,feimo.fun
+  - DOMAIN-SUFFIX,gejiba.com
+  - DOMAIN-SUFFIX,934evf.com
+  - DOMAIN-SUFFIX,xpgtv.net
+  - DOMAIN-SUFFIX,milvdou.fun
+  - DOMAIN-SUFFIX,ztcuc.com
+  - DOMAIN-SUFFIX,seagmcdn.com
+  - DOMAIN-SUFFIX,blbtgg.com
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
   - DOMAIN-KEYWORD,suoniapi
