--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -105,6 +105,14 @@ payload:
   - DOMAIN-SUFFIX,ztcuc.com
   - DOMAIN-SUFFIX,seagmcdn.com
   - DOMAIN-SUFFIX,blbtgg.com
+  - DOMAIN-SUFFIX,maoyanplay.top
+  - DOMAIN-SUFFIX,xiaomiai.site
+  - DOMAIN-SUFFIX,misopan.fun
+  - DOMAIN-SUFFIX,56dm.cc
+  - DOMAIN-SUFFIX,ntdm8.com
+  - DOMAIN-SUFFIX,ryzypics.com
+  - DOMAIN-SUFFIX,guoluche.com
+  - DOMAIN-SUFFIX,mytvapp.cc
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
   - DOMAIN-KEYWORD,suoniapi
