--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -147,5 +147,7 @@ payload:
   - DOMAIN-KEYWORD,yym4
 # 机场
   - DOMAIN-SUFFIX,yuetoto.net
-# 直播源论坛  
+# 直播源论坛
   - DOMAIN-SUFFIX,livecodes.vip
+# PT站
+  - DOMAIN-SUFFIX,pterclub.net
