--- a/mihomo/rule/DirectFix.yaml
+++ b/mihomo/rule/DirectFix.yaml
@@ -118,6 +118,7 @@ payload:
   - DOMAIN-SUFFIX,ryzypics.com
   - DOMAIN-SUFFIX,guoluche.com
   - DOMAIN-SUFFIX,mytvapp.cc
+  - DOMAIN-SUFFIX,dytt-live.com
   - DOMAIN-KEYWORD,jianpianupdate
   - DOMAIN-KEYWORD,yunso
   - DOMAIN-KEYWORD,suoniapi
